fixed video on mobile?

--- a/src/components/styles/Landing.css
+++ b/src/components/styles/Landing.css
@@ -128,8 +128,8 @@
     font-weight: 500;
   }
   .videoclass {
-    height: fit-content;
-    width:100%;
+    width: fit-content;
+    height:100%;
     object-fit: cover;
     position: fixed;
     left: 0;
